# src/swagger/swagger-output.json
@@ -19,6 +19,11 @@
       "description": "Enter your bearer token in the format **Bearer <token>**"
     }
   },
+  "security": [
+    {
+      "bearerAuth": []
+    }
+  ],
   "paths": {
     "/": {
       "get": {
@@ -47,6 +52,9 @@
                   "example": "any"
                 },
                 "login_type": {
+                  "example": "any"
+                },
+                "name": {
                   "example": "any"
                 }
               }
@@ -80,6 +88,33 @@
                   "example": "any"
                 },
                 "login_type": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/update-size-preferences": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "user_id": {
+                  "example": "any"
+                },
+                "size_preferences": {
                   "example": "any"
                 }
               }
